--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+logging.level.org.springframework.jdbc.core=DEBUG
+spring.datasource.url=jdbc:sqlserver://webrtc.database.windows.net:1433;database=webrtc;user=webrtc@webrtc;password=Ott1234!;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=webrtc
+spring.datasource.password=Ott1234!
+spring.datasource.initialization-mode=always
