--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.url=jdbc:sqlserver://webrtc.database.windows.net:1433;database
 spring.datasource.username=webrtc
 spring.datasource.password=Ott1234!
 spring.datasource.initialization-mode=always
+
+redis.host=webrtc.redis.cache.windows.net
+redis.port=6380
+redis.database = 0
+redis.password=DALiHLS518pwKEMvLjDupEt8lGifJ7T6yAzCaAtWkW4=
+redis.timeout = 10000
+
